attempt to remove white space again
fail

--- a/about.html
+++ b/about.html
@@ -1,20 +1,16 @@
 <!doctype>
 <html>
-<head>
+  <head>
 
-  <title> Creative Guild </title>
+    <title> Creative Guild </title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 
-    <link rel="stylesheet"
-href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" crossorigin="anonymous">
-<link rel="stylesheet" type="text/css" href="css/styles.css">
-  <script
-src="https://code.jquery.com/jquery-3.4.1.min.js"
-integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
-</head>
-<body>
+  </head>
+  <body>
 
 
 
@@ -24,41 +20,41 @@ crossorigin="anonymous"></script>
 
 
     <div class="containter" id="introT1">
-        <p><strong> *Cough* </strong> </p>
-        <br>
+      <p><strong> *Cough* </strong> </p>
+      <br>
     </div class="container" id="introT1">
     <div class="container" id="introT2">
-        <p> <strong> Cue powerful narrator voice: </strong> </p>
+      <p> <strong> Cue powerful narrator voice: </strong> </p>
     </div class="container" id="introT2">
-      <br>
+    <br>
 
-      <div class="container" id="paragraph1">
-        <p>“Join us on an adventure of a lifetime, to a world unknown,
-    <br> filled with creatures hiding in their rooms,
-    <br> coming out to see the light once in a blue moon, to interact in the unknown.
+    <div class="container" id="paragraph1">
+      <p>“Join us on an adventure of a lifetime, to a world unknown,
+      <br> filled with creatures hiding in their rooms,
+      <br> coming out to see the light once in a blue moon, to interact in the unknown.
       <br> All are invited! Whether your stories are simply just ideas or all you have is a character in mind,
       <br> to those who write as they breath, to intricate planners of nonsense!
       <br> Whether you like action, romance, or revision of old classics and new
       <br> (yes fan fiction writers! I am the point at you hissing behind your bright screens!
       <br> Its time to see the light) Come and explore it all!
       <br> Find a home away from home at Keele Creative writing society!"" </p>
-      </div id="intro">
+    </div id="intro">
 
-<div class="col-md-12">
+    <div class="col-md-12">
       <div class="row justify-content-center">
-            <IMG SRC="rd.gif" align:"right" style= "width:65%">
-          </div>
-        </div>
-
-
-<div class="container">
-<div class="row justify-content-end">
-  <div class="container" id="SM">
-    <a target="_blank" title="follow me on Twitter" href="https://twitter.com/KeeleUniversity"><img alt="follow me on Twitter" src="https://c866088.ssl.cf3.rackcdn.com/assets/twitter30x30.png" border=0></a>
-      <a target="_blank" title="follow me on instagram" href="https://www.instagram.com/keeleuniversity/"><img alt="follow me on instagram" src="https://c866088.ssl.cf3.rackcdn.com/assets/instagram30x30.png" border=0></a>
-        <a target="_blank" title="follow me on facebook" href="https://www.facebook.com/KeeleUniversity/"><img alt="follow me on facebook" src="https://c866088.ssl.cf3.rackcdn.com/assets/facebook30x30.png" border=0></a>
+        <IMG SRC="rd.gif" align:"right" style= "width:65%">
       </div>
     </div>
+
+
+    <div class="container">
+      <div class="row justify-content-end">
+        <div class="container" id="SM">
+          <a target="_blank" title="follow me on Twitter" href="https://twitter.com/KeeleUniversity"><img alt="follow me on Twitter" src="https://c866088.ssl.cf3.rackcdn.com/assets/twitter30x30.png" border=0></a>
+          <a target="_blank" title="follow me on instagram" href="https://www.instagram.com/keeleuniversity/"><img alt="follow me on instagram" src="https://c866088.ssl.cf3.rackcdn.com/assets/instagram30x30.png" border=0></a>
+          <a target="_blank" title="follow me on facebook" href="https://www.facebook.com/KeeleUniversity/"><img alt="follow me on facebook" src="https://c866088.ssl.cf3.rackcdn.com/assets/facebook30x30.png" border=0></a>
+        </div>
+      </div>
     </div>
 
 
@@ -66,4 +62,4 @@ crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
 
   </body>
-  </html>
+</html>
