--- a/gallary.html
+++ b/gallary.html
@@ -1,118 +1,114 @@
 <!doctype>
 <html>
-<head>
-  <title> Creative Guild </title>
+  <head>
+    <title> Creative Guild </title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 
-    <link rel="stylesheet"
-  href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="css/styles.css">
-  <script
-  src="https://code.jquery.com/jquery-3.4.1.min.js"
-  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-  crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
-  <script src="https://unpkg.com/muuri@0.8.0/dist/muuri.min.js"></script>
-  <script src="https://unpkg.com/web-animations-js@2.3.2/web-animations.min.js"></script>
-  <script src="https://unpkg.com/muuri@0.8.0/dist/muuri.min.js"></script>
-</head>
-<body>
+    <script src="https://unpkg.com/muuri@0.8.0/dist/muuri.min.js"></script>
+    <script src="https://unpkg.com/web-animations-js@2.3.2/web-animations.min.js"></script>
+    <script src="https://unpkg.com/muuri@0.8.0/dist/muuri.min.js"></script>
+  </head>
+  <body>
 
 
 
 
-<div class="grid">
+    <div class="grid">
 
-  <div class="item">
-    <div class="item-content">
+      <div class="item">
+        <div class="item-content">
         <!-- Safe zone, enter your custom markup -->
         This can be anything.
         <!-- Safe zone ends -->
-      </div>
-    </div>
-<div class="col-md-9 offset-md-0">
-  <div class="row-justify-content-start">
-    <div class="item">
-      <div class="item-content">
-        <!-- Safe zone, enter your custom markup -->
-        <div class="my-custom-content">
-
-          <img src="dt.jpg" alt="debbie tung comic" width="100px">
         </div>
-        <!-- Safe zone ends -->
       </div>
-    </div>
-  </div>
-</div>
-
-<div class="col-md-9 offset-md-0">
-  <div class="row-justify-content-end">
-    <div class="item">
-      <div class="item-content">
+      <div class="col-md-9 offset-md-0">
+        <div class="row-justify-content-start">
+          <div class="item">
+            <div class="item-content">
         <!-- Safe zone, enter your custom markup -->
-        <div class="my-custom-content">
+              <div class="my-custom-content">
+
+                <img src="dt.jpg" alt="debbie tung comic" width="100px">
+              </div>
+        <!-- Safe zone ends -->
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-9 offset-md-0">
+        <div class="row-justify-content-end">
+          <div class="item">
+            <div class="item-content">
+        <!-- Safe zone, enter your custom markup -->
+              <div class="my-custom-content">
 
           <!-- <img src="fc.jpeg" alt="debbie tung comic" width="200px"> -->
-          <a href="https://www.instagram.com/wheresmybubble/?hl=en"><img alt="follow me on facebook" src="fc.jpeg"></a>
-        </div>
+                <a href="https://www.instagram.com/wheresmybubble/?hl=en"><img alt="follow me on facebook" src="fc.jpeg"></a>
+              </div>
         <!-- Safe zone ends -->
+            </div>
+          </div>
+        </div>
       </div>
+
     </div>
-  </div>
-</div>
-
-  </div>
 
 
 
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
-<div class="row justify-content-between">
-  <div class="col-md-9 offset-md-0">
-    <div class="row">
-      <div class="item">
-        <div class="item-content">
+    <div class="row justify-content-between">
+      <div class="col-md-9 offset-md-0">
+        <div class="row">
+          <div class="item">
+            <div class="item-content">
           <!-- Safe zone, enter your custom markup -->
-          <div class="my-custom-content">
+              <div class="my-custom-content">
 
-            <a class="lightbox" href="#dog">
-     <img src="dt.jpg"/>
-  </a>
-  <div class="lightbox-target" id="dog">
-     <img src="dt.jpg"/>
-     <a class="lightbox-close" href="#"></a>
-  </div>
-          </div>
+                <a class="lightbox" href="#dog">
+                  <img src="dt.jpg"/>
+                </a>
+                <div class="lightbox-target" id="dog">
+                  <img src="dt.jpg"/>
+                  <a class="lightbox-close" href="#"></a>
+                </div>
+              </div>
           <!-- Safe zone ends -->
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-  </div>
 
 
-  <div class="col-md-9 offset-md-0">
-    <div class="row">
-      <div class="item2">
-        <div class="item-content">
-          <div class="competition" id="competition">   <a href="https://ikrat101.github.io/CG/documenttemplate"><img alt="question about us" src="ch.jpg" style= "width:20%"></a>
-          <div class="my-custom-content">
+      <div class="col-md-9 offset-md-0">
+        <div class="row">
+          <div class="item2">
+            <div class="item-content">
+              <div class="competition" id="competition">   <a href="https://ikrat101.github.io/CG/documenttemplate"><img alt="question about us" src="ch.jpg" style= "width:20%"></a>
+                <div class="my-custom-content">
 
-          coming soon
-          </div>
+                  coming soon
+                </div>
           <!-- Safe zone ends -->
+              </div>
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
-  </div>
 
 
   <!-- <div class="col-md-9 offset-md-0">
@@ -129,8 +125,9 @@
     </div>
   </div> -->
 
-</div>
-  <script src="js/script.js"></script>
+      </div>
+    </div>
+    <script src="js/script.js"></script>
 
-</body>
+  </body>
 </html>
