--- a/submit.html
+++ b/submit.html
@@ -1,25 +1,21 @@
 
 <!doctype>
 <html>
-<head>
-  <title> Creative Guild </title>
+  <head>
+    <title> Creative Guild </title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 
-    <link rel="stylesheet"
-  href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="css/styles.css">
-  <script
-  src="https://code.jquery.com/jquery-3.4.1.min.js"
-  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-  crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
-</head>
-<body>
+  </head>
+  <body>
 
 
-      <div class="row justify-content-center">
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf0nj2K8d2yhiFk2_z9ngbjJdjfcw7oQgBJDdquTy00bsj1_Q/viewform?embedded=true" width="440" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-      </div>
+    <div class="row justify-content-center">
+      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf0nj2K8d2yhiFk2_z9ngbjJdjfcw7oQgBJDdquTy00bsj1_Q/viewform?embedded=true" width="440" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+    </div>
 
       <!-- <div class="file-upload-wrapper">
         <input type="file" id="input-file-now" class="file-upload" />
@@ -27,18 +23,18 @@
  -->
 
 
-      <div class="row justify-content-center">
+    <div class="row justify-content-center">
       <a class="btn btn-danger" href="https://forms.gle/7ofzhLmzuoACBP9m6" role="button">Upload file here</a>
-      </div>
+    </div>
 
-  <div class="container" id="SM">
-    <a target="_blank" title="follow me on Twitter" href="https://twitter.com/KeeleUniversity"><img alt="follow me on Twitter" src="https://c866088.ssl.cf3.rackcdn.com/assets/twitter30x30.png" border=0></a>
+    <div class="container" id="SM">
+      <a target="_blank" title="follow me on Twitter" href="https://twitter.com/KeeleUniversity"><img alt="follow me on Twitter" src="https://c866088.ssl.cf3.rackcdn.com/assets/twitter30x30.png" border=0></a>
       <a target="_blank" title="follow me on instagram" href="https://www.instagram.com/keeleuniversity/"><img alt="follow me on instagram" src="https://c866088.ssl.cf3.rackcdn.com/assets/instagram30x30.png" border=0></a>
-        <a target="_blank" title="follow me on facebook" href="https://www.facebook.com/KeeleUniversity/"><img alt="follow me on facebook" src="https://c866088.ssl.cf3.rackcdn.com/assets/facebook30x30.png" border=0></a>
-      </div>
+      <a target="_blank" title="follow me on facebook" href="https://www.facebook.com/KeeleUniversity/"><img alt="follow me on facebook" src="https://c866088.ssl.cf3.rackcdn.com/assets/facebook30x30.png" border=0></a>
+    </div>
 
 
-  <script src="js/script.js"></script>
+    <script src="js/script.js"></script>
 
-</body>
+  </body>
 </html>
