--- a/documentTemplate.html
+++ b/documentTemplate.html
@@ -1,63 +1,59 @@
 <!doctype>
 <html>
-<head>
-  <title> Creative Guild </title>
+  <head>
+    <title> Creative Guild </title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 
-    <link rel="stylesheet"
-  href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="css/styles.css">
-  <script
-  src="https://code.jquery.com/jquery-3.4.1.min.js"
-  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-  crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
-</head>
-<body>
+  </head>
+  <body>
 
 
 
 
 
 
-  <div id="fb-root"></div>
-  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v5.0"></script>
-  <div id="fb-root"></div>
-  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v5.0"></script>
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v5.0"></script>
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v5.0"></script>
 
-<h1><strong> Story tittle </strong></h1>
+    <h1><strong> Story tittle </strong></h1>
 
-<br>
-<br>
-<Br>
+    <br>
+    <br>
+    <Br>
 
-  <P1> Once upon a time </P1>
-
-
-<br>
-<br>
-<br>
-<br>
+    <P1> Once upon a time </P1>
 
 
+    <br>
+    <br>
+    <br>
+    <br>
 
 
 
 
-<div class="fb-comments" data-href="https://ikrat101.github.io/CG/documentTemplate" data-width="" data-numposts="5"></div>
 
-<div class="fb-like" data-href="https://ikrat101.github.io/CG/" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="true"></div>
 
-<br>
-<br>
+    <div class="fb-comments" data-href="https://ikrat101.github.io/CG/documentTemplate" data-width="" data-numposts="5"></div>
 
-<div class="container" id="SM">
-  <a target="_blank" title="follow me on Twitter" href="https://twitter.com/KeeleUniversity"><img alt="follow me on Twitter" src="https://c866088.ssl.cf3.rackcdn.com/assets/twitter30x30.png" border=0></a>
-    <a target="_blank" title="follow me on instagram" href="https://www.instagram.com/keeleuniversity/"><img alt="follow me on instagram" src="https://c866088.ssl.cf3.rackcdn.com/assets/instagram30x30.png" border=0></a>
+    <div class="fb-like" data-href="https://ikrat101.github.io/CG/" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="true"></div>
+
+    <br>
+    <br>
+
+    <div class="container" id="SM">
+      <a target="_blank" title="follow me on Twitter" href="https://twitter.com/KeeleUniversity"><img alt="follow me on Twitter" src="https://c866088.ssl.cf3.rackcdn.com/assets/twitter30x30.png" border=0></a>
+      <a target="_blank" title="follow me on instagram" href="https://www.instagram.com/keeleuniversity/"><img alt="follow me on instagram" src="https://c866088.ssl.cf3.rackcdn.com/assets/instagram30x30.png" border=0></a>
       <a target="_blank" title="follow me on facebook" href="https://www.facebook.com/KeeleUniversity/"><img alt="follow me on facebook" src="https://c866088.ssl.cf3.rackcdn.com/assets/facebook30x30.png" border=0></a>
     </div>
 
     <script src="js/script.js"></script>
 
-</body>
+  </body>
 </html>
