--- a/documentTemplate.html
+++ b/documentTemplate.html
@@ -44,6 +44,26 @@
 
     <div class="fb-like" data-href="https://ikrat101.github.io/CG/" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="true"></div>
 
+
+
+    <div class="row">
+      <div class="about2" id="about2">
+        <a href="https://ikrat101.github.io/CG/about.html"><img alt="question about us" src="q.jpg" style= "width:20%"></a>
+      </div>
+      <div class="mb2" id="mb3">
+        <a href="https://ikrat101.github.io/CG/contact.html"><img alt="messanger bird" src="b.jpg" style= "width:20%"></a>
+      </div>
+      <div class="phrop2" id="phrop4">
+        <a href="https://ikrat101.github.io/CG/submit.html"><img alt="phrophecy" src="s.jpg" style= "width:15%"></a>
+      </div>
+      <div class="quest2" id="quest5">
+        <a href="https://ikrat101.github.io/CG/competitions.html"><img alt="quest" src="ch.jpg" style= "width:20%"></a>
+      </div>
+      <div class="pf2" id="pf6" >
+        <a href="https://ikrat101.github.io/CG/gallary.html"><img alt="gallary" src="pf.jpg" style= "width:20%"></a>
+      </div>
+    </div>
+
     <br>
     <br>
 
