--- a/index.html
+++ b/index.html
@@ -1,6 +1,23 @@
 <!doctype>
 <html>
   <head>
+
+<!-- <div class="wwts2" id="wwts2">
+  <img src="wwts2.jpeg" alt="why we tell stories" style="width:40%">
+</div> -->
+
+
+
+<div class="video" id="video">
+    <div class="embed-responsive embed-responsive-21by9">
+      <iframe width="560" height="416" src="https://www.youtube.com/embed/ShPoJX_eudI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="width:50%" ></iframe>
+    </div>
+    <div class="wwts">
+    <img src="wwts2.jpeg" alt="why we tell stories" style="width:150%">
+  </div>
+  </div>
+
+
     <title> Creative Guild </title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 
@@ -46,7 +63,7 @@
         <a href="https://ikrat101.github.io/CG/submit.html"><img alt="phrophecy" src="s.jpg" style= "width:15%"></a>
       </div>
       <div class="quest" id="quest">
-        <a href="https://ikrat101.github.io/CG/competition.html"><img alt="quest" src="ch.jpg" style= "width:20%"></a>
+        <a href="https://ikrat101.github.io/CG/competitions.html"><img alt="quest" src="ch.jpg" style= "width:20%"></a>
       </div>
       <div class="pf" id="pf" >
         <a href="https://ikrat101.github.io/CG/gallary.html"><img alt="gallary" src="pf.jpg" style= "width:20%"></a>
