--- a/submit.html
+++ b/submit.html
@@ -27,6 +27,26 @@
       <a class="btn btn-danger" href="https://forms.gle/7ofzhLmzuoACBP9m6" role="button">Upload file here</a>
     </div>
 
+
+
+    <div class="row">
+      <div class="about2" id="about2">
+        <a href="https://ikrat101.github.io/CG/about.html"><img alt="question about us" src="q.jpg" style= "width:20%"></a>
+      </div>
+      <div class="mb2" id="mb3">
+        <a href="https://ikrat101.github.io/CG/contact.html"><img alt="messanger bird" src="b.jpg" style= "width:20%"></a>
+      </div>
+      <div class="phrop2" id="phrop4">
+        <a href="https://ikrat101.github.io/CG/submit.html"><img alt="phrophecy" src="s.jpg" style= "width:15%"></a>
+      </div>
+      <div class="quest2" id="quest5">
+        <a href="https://ikrat101.github.io/CG/competitions.html"><img alt="quest" src="ch.jpg" style= "width:20%"></a>
+      </div>
+      <div class="pf2" id="pf6" >
+        <a href="https://ikrat101.github.io/CG/gallary.html"><img alt="gallary" src="pf.jpg" style= "width:20%"></a>
+      </div>
+    </div>
+
     <div class="container" id="SM">
       <a target="_blank" title="follow me on Twitter" href="https://twitter.com/KeeleUniversity"><img alt="follow me on Twitter" src="https://c866088.ssl.cf3.rackcdn.com/assets/twitter30x30.png" border=0></a>
       <a target="_blank" title="follow me on instagram" href="https://www.instagram.com/keeleuniversity/"><img alt="follow me on instagram" src="https://c866088.ssl.cf3.rackcdn.com/assets/instagram30x30.png" border=0></a>
