--- a/contact.html
+++ b/contact.html
@@ -14,8 +14,29 @@
       <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfadae8s6cIKUQsxCXbbbpWzrJqlCSIhma5u3IzRlzuy37FIg/viewform?embedded=true" width="440" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </div>
 
+
+
     <br>
     <br>
+
+    <div class="row">
+      <div class="about3" id="about3">
+        <a href="https://ikrat101.github.io/CG/about.html"><img alt="question about us" src="q.jpg" style= "width:20%"></a>
+      </div>
+      <div class="mb3" id="mb3">
+        <a href="https://ikrat101.github.io/CG/contact.html"><img alt="messanger bird" src="b.jpg" style= "width:20%"></a>
+      </div>
+      <div class="phrop3" id="phrop3">
+        <a href="https://ikrat101.github.io/CG/submit.html"><img alt="phrophecy" src="s.jpg" style= "width:15%"></a>
+      </div>
+      <div class="quest3" id="quest3">
+        <a href="https://ikrat101.github.io/CG/competitions.html"><img alt="quest" src="ch.jpg" style= "width:20%"></a>
+      </div>
+      <div class="pf3" id="pf3" >
+        <a href="https://ikrat101.github.io/CG/gallary.html"><img alt="gallary" src="pf.jpg" style= "width:20%"></a>
+      </div>
+    </div>
+
     <br>
 
 
