--- a/gallary.html
+++ b/gallary.html
@@ -90,7 +90,7 @@
   </div></a>
 
 
-    </div>
+    <!-- </div>
     <div class="row">
       <div class="about4" id="about2">
         <a href="https://ikrat101.github.io/CG/about.html"><img alt="question about us" src="q.jpg" style= "width:20%"></a>
@@ -108,7 +108,7 @@
         <a href="https://ikrat101.github.io/CG/gallary.html"><img alt="gallary" src="pf.jpg" style= "width:20%"></a>
       </div>
     </div>
-      <script src="js/sw.js"></script>
+      <script src="js/sw.js"></script> -->
 
   </body>
 </html>
