--- a/gallary.html
+++ b/gallary.html
@@ -65,22 +65,22 @@
 
 
 
-<a target="_blank" title="follow me on Twitter" href="https://www.youtube.com/watch?v=ShPoJX_eudI&feature=emb_title"><img alt="follow me on Twitter" src="wwts2.jpeg" border=0></a>
+<a target="_blank" title="follow me on Twitter" href="https://ikrat101.github.io/CG/documentTemplate.html"><img alt="follow me on Twitter" src="wwts2.jpeg" border=0></a>
 
 
-<a target="_blank" title="follow me on Twitter" href="https://www.youtube.com/watch?v=ShPoJX_eudI&feature=emb_title"><img alt="s.jpg" src="s.jpg" width= "100px" border=0></a>
+<a target="_blank" title="follow me on Twitter" href="https://ikrat101.github.io/CG/documentTemplate.html"><img alt="s.jpg" src="s.jpg" width= "100px" border=0></a>
 
-<a target="_blank" title="follow me on Twitter" href="https://www.youtube.com/watch?v=ShPoJX_eudI&feature=emb_title"><IMG SRC="dgif.gif" align:"right" style= "width:20%" border=0></a>
+<a target="_blank" title="follow me on Twitter" href="https://ikrat101.github.io/CG/documentTemplate.html"><IMG SRC="dgif.gif" align:"right" style= "width:20%" border=0></a>
 
 <br>
 
 
-<a target="_blank" title="follow me on Twitter" href="https://www.youtube.com/watch?v=ShPoJX_eudI&feature=emb_title"><img alt="follow me on Twitter" src="logo.jpg" width="200px" border=0></a>
+<a target="_blank" title="follow me on Twitter" href="https://ikrat101.github.io/CG/documentTemplate.html"><img alt="follow me on Twitter" src="logo.jpg" width="200px" border=0></a>
 
 
-<a target="_blank" title="follow me on Twitter" href="https://www.youtube.com/watch?v=ShPoJX_eudI&feature=emb_title"><IMG SRC="dgif.gif" align:"right" style= "width:20%" border=0></a>
+<a target="_blank" title="follow me on Twitter" href="https://ikrat101.github.io/CG/documentTemplate.html"><IMG SRC="dgif.gif" align:"right" style= "width:20%" border=0></a>
 
-<a target="_blank" title="follow me on Twitter" href="https://www.youtube.com/watch?v=ShPoJX_eudI&feature=emb_title">  <a class="lightbox" href="#dog">
+<a target="_blank" title="follow me on Twitter" href="https://ikrat101.github.io/CG/documentTemplate.html">  <a class="lightbox" href="#dog">
     <img src="dt.jpg"/>
   </a>
   </div>
@@ -90,25 +90,7 @@
   </div></a>
 
 
-    <!-- </div>
-    <div class="row">
-      <div class="about4" id="about2">
-        <a href="https://ikrat101.github.io/CG/about.html"><img alt="question about us" src="q.jpg" style= "width:20%"></a>
-      </div>
-      <div class="mb4" id="mb3">
-        <a href="https://ikrat101.github.io/CG/contact.html"><img alt="messanger bird" src="b.jpg" style= "width:20%"></a>
-      </div>
-      <div class="phrop4" id="phrop4">
-        <a href="https://ikrat101.github.io/CG/submit.html"><img alt="phrophecy" src="s.jpg" style= "width:15%"></a>
-      </div>
-      <div class="quest4" id="quest5">
-        <a href="https://ikrat101.github.io/CG/competitions.html"><img alt="quest" src="ch.jpg" style= "width:20%"></a>
-      </div>
-      <div class="pf4" id="pf6" >
-        <a href="https://ikrat101.github.io/CG/gallary.html"><img alt="gallary" src="pf.jpg" style= "width:20%"></a>
-      </div>
-    </div>
-      <script src="js/sw.js"></script> -->
+
 
   </body>
 </html>
