--- a/competitions.html
+++ b/competitions.html
@@ -12,22 +12,36 @@
   </head>
   <body>
 
-    <!-- <img src="..." alt="" width=""> -->
+
+<br>
+<div class="row justify-content-center">
+    <img src="cs.jpeg" alt="coming soon" width="500px">
+</div>
+<br>
+
+<div class="concorse" id="concorse">
+<h1> In colaboration with concorse. </h1>
+</div>
+
+<br>
+<div class="row" id="comp">
+  <IMG SRC="dgif.gif" align:"right" style= "width:20%">
+</div>
 
     <div class="row">
-      <div class="about2" id="about2">
+      <div class="about5" id="about5">
         <a href="https://ikrat101.github.io/CG/about.html"><img alt="question about us" src="q.jpg" style= "width:20%"></a>
       </div>
-      <div class="mb2" id="mb3">
+      <div class="mb5" id="mb5">
         <a href="https://ikrat101.github.io/CG/contact.html"><img alt="messanger bird" src="b.jpg" style= "width:20%"></a>
       </div>
-      <div class="phrop2" id="phrop4">
+      <div class="phrop5" id="phrop5">
         <a href="https://ikrat101.github.io/CG/submit.html"><img alt="phrophecy" src="s.jpg" style= "width:15%"></a>
       </div>
-      <div class="quest2" id="quest5">
+      <div class="quest5" id="quest5">
         <a href="https://ikrat101.github.io/CG/competitions.html"><img alt="quest" src="ch.jpg" style= "width:20%"></a>
       </div>
-      <div class="pf2" id="pf6" >
+      <div class="pf5" id="pf5" >
         <a href="https://ikrat101.github.io/CG/gallary.html"><img alt="gallary" src="pf.jpg" style= "width:20%"></a>
       </div>
     </div>
