--- a/documentTemplate.html
+++ b/documentTemplate.html
@@ -27,7 +27,7 @@
     <br>
     <Br>
 
-    <P1> Once upon a time </P1>
+    <P1> Once upon a time... </P1>
 
 
     <br>
@@ -42,6 +42,9 @@
 
     <div class="fb-comments" data-href="https://ikrat101.github.io/CG/documentTemplate" data-width="" data-numposts="5"></div>
 
+<br>
+<br>
+<br>
     <div class="fb-like" data-href="https://ikrat101.github.io/CG/" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="true"></div>
 
 
