--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
   </head>
   <body onload="myFunction()">
 
+
+
+
+
     <div class="wwts">
     <img src="wwts2.jpeg" alt="why we tell stories" style="width:150%">
     </div>
@@ -22,6 +26,10 @@
           <iframe width="560" height="416" src="https://www.youtube.com/embed/ShPoJX_eudI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="width:50%" ></iframe>
         </div>
       </div>
+<br>
+      <div class="page2" id="page2" >
+                  <button class="myLinkToTop" id="but1" >Page 2</button>
+              </div>
 
     <div class="CG" id="CG">
       <img src="tl.jpg" id="title" alt="Creative Guild" style="width:40%">
@@ -35,6 +43,9 @@
       <IMG SRC="dgif.gif" align:"right" style= "width:20%">
     </div>
 
+<div class="page1" id="page1">
+  <button class="myMenuLink" id="but1" >Page 1</button>
+</div>
 
     <div class="row">
       <div class="about" id="about">
