addition of logo
to go to home page

--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,12 @@
   </head>
   <body>
 
+    
+
+    <div class="row justify-content-start">
+        <a target="_blank" title="follow me on Twitter" href="https://ikrat101.github.io/CG/index.html"><img alt="follow me on Twitter" src="logo.jpg" border=0 style="width:150px"></a>
+    </div>
+
     <div class="row justify-content-center">
       <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfadae8s6cIKUQsxCXbbbpWzrJqlCSIhma5u3IzRlzuy37FIg/viewform?embedded=true" width="440" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </div>
