--- a/gallary.html
+++ b/gallary.html
@@ -13,6 +13,10 @@
   </head>
   <body>
 
+<div class="row justify-content-start">
+    <a target="_blank" title="follow me on Twitter" href="https://ikrat101.github.io/CG/index.html"><img alt="follow me on Twitter" src="logo.jpg" border=0 style="width:150px"></a>
+</div>
+
     <h1> Scrolls</h1>
 
 <!--
