--- a/submit.html
+++ b/submit.html
@@ -11,7 +11,9 @@
 
   </head>
   <body>
-
+    <div class="row justify-content-start">
+        <a target="_blank" title="follow me on Twitter" href="https://ikrat101.github.io/CG/index.html"><img alt="follow me on Twitter" src="logo.jpg" border=0 style="width:150px"></a>
+    </div>
 
     <div class="row justify-content-center">
       <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf0nj2K8d2yhiFk2_z9ngbjJdjfcw7oQgBJDdquTy00bsj1_Q/viewform?embedded=true" width="440" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
@@ -26,6 +28,9 @@
     <div class="row justify-content-center">
       <a class="btn btn-danger" href="https://forms.gle/7ofzhLmzuoACBP9m6" role="button">Upload file here</a>
     </div>
+
+<br>
+<h2> Click the red button to upload bigger files </h2>
 
 
 
