--- a/competitions.html
+++ b/competitions.html
@@ -12,7 +12,9 @@
   </head>
   <body>
 
-
+    <div class="row justify-content-start">
+        <a target="_blank" title="follow me on Twitter" href="https://ikrat101.github.io/CG/index.html"><img alt="follow me on Twitter" src="logo.jpg" border=0 style="width:150px"></a>
+    </div>
 <br>
 <div class="row justify-content-center">
     <img src="cs.jpeg" alt="coming soon" width="500px">
