--- a/about.html
+++ b/about.html
@@ -12,7 +12,9 @@
   </head>
   <body>
 
-
+    <div class="row justify-content-start">
+        <a target="_blank" title="follow me on Twitter" href="https://ikrat101.github.io/CG/index.html"><img alt="follow me on Twitter" src="logo.jpg" border=0 style="width:150px"></a>
+    </div>
 
     <div>
       <h1><strong>About Creative Guild</strong></h1>
