--- a/competitions.html
+++ b/competitions.html
@@ -15,20 +15,20 @@
     <div class="row justify-content-start">
         <a target="_blank" title="follow me on Twitter" href="https://ikrat101.github.io/CG/index.html"><img alt="follow me on Twitter" src="logo.jpg" border=0 style="width:150px"></a>
     </div>
-<br>
-<div class="row justify-content-center">
-    <img src="cs.jpeg" alt="coming soon" width="500px">
-</div>
-<br>
+    <br>
+    <div class="row justify-content-center">
+      <img src="cs.jpeg" alt="coming soon" width="500px">
+    </div>
+    <br>
 
-<div class="concorse" id="concorse">
-<h1> In colaboration with concorse. </h1>
-</div>
+    <div class="concorse" id="concorse">
+      <h1> In collaboration with concourse. </h1>
+    </div>
 
-<br>
-<div class="row" id="comp">
-  <IMG SRC="dgif.gif" align:"right" style= "width:20%">
-</div>
+    <br>
+    <div class="row" id="comp">
+      <IMG SRC="dgif.gif" align:"right" style= "width:20%">
+    </div>
 
     <div class="row">
       <div class="about5" id="about5">
