--- a/documentTemplate.html
+++ b/documentTemplate.html
@@ -12,7 +12,7 @@
   <body>
 
     <div class="row justify-content-start">
-        <a target="_blank" title="follow me on Twitter" href="https://ikrat101.github.io/CG/index.html"><img alt="follow me on Twitter" src="logo.jpg" border=0 style="width:150px"></a>
+      <a target="_blank" title="follow me on Twitter" href="https://ikrat101.github.io/CG/index.html"><img alt="follow me on Twitter" src="logo.jpg" border=0 style="width:150px"></a>
     </div>
 
 
@@ -23,7 +23,7 @@
     <div id="fb-root"></div>
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v5.0"></script>
 
-    <h1><strong> Story tittle </strong></h1>
+    <h1><strong> Story title </strong></h1>
 
     <br>
     <br>
@@ -44,9 +44,9 @@
 
     <div class="fb-comments" data-href="https://ikrat101.github.io/CG/documentTemplate" data-width="" data-numposts="5"></div>
 
-<br>
-<br>
-<br>
+    <br>
+    <br>
+    <br>
     <div class="fb-like" data-href="https://ikrat101.github.io/CG/" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="true"></div>
 
 
